# agentic-aml-system

./: .env.example  .gitignore  README.md  README_Phase1.md  check.py  download.py  generate_notebook.py  groq_models.json  groq_models_script.py  pyproject.toml  requirements.txt
dummy_codes/: optimised_graph_agent.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: TransactionGraph.jsx
frontend/src/components/investigation/: NarrativeBox.jsx  NetworkGraph.jsx  RiskGauge.jsx  StatusTracker.jsx
frontend/src/components/layout/: GlobalShell.jsx  Navbar.jsx
frontend/src/hooks/: useTheme.js
frontend/src/pages/: Investigate.jsx
frontend/src/store/: useInvestigationStore.js
notebooks/: phase1_detection_eval.ipynb  phase1_eda.ipynb
notebooks/models/: isolation_forest.joblib
src/agents/: detection_agent.py  explanation_agent.py  feature_agent.py  graph_agent.py  pattern_agent.py  risk_agent.py
src/api/: main.py
src/orchestration/: __init__.py  errors.py  graph.py  run.py  state.py
src/pipeline/: data_ingestion.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  state_phase3.py  state_phase4.py
src/utils/: global_stats.py
tests/: test_data_ingestion.py  test_detection_agent.py  test_orchestration_errors.py  test_orchestration_graph_and_runner.py  test_orchestration_state.py  test_risk_agent.py
